--- a/fleet.html
+++ b/fleet.html
@@ -122,7 +122,7 @@
   <!-- Banner Text -->
   <div class="absolute inset-0 flex flex-col items-center justify-center text-center px-4">
     <h1 class="text-white text-4xl md:text-6xl font-bold tracking-wide">
-      OUR FLEETdajkdhajkdhajkdhajkdhajkdhk
+      OUR FLEET
     </h1>
     <p class="text-white text-lg md:text-xl mt-3 opacity-90">
       Safe, Comfortable & Fully Equipped Medical Transportation Vehicles
